Kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: eatfresh
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: registry.gitlab.au.dk/wao-exercises1/eatfresh/eatfresh.menumanagement:v.0.0.8
        ports:
        - containerPort: 5136
        resources:
          requests:
            cpu: "150m"
            memory: "64Mi"
          limits:
            cpu: "600m"
            memory: "128Mi"
        volumeMounts:
        - name: config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
      volumes:
      - name: config-volume
        configMap:
          name: server-config
      imagePullSecrets:
      - name: my-registry-credentials
