Kubernetes/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment
  namespace: eatfresh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: sql-persistent-storage
      volumes:
      - name: sql-persistent-storage
        persistentVolumeClaim:
          claimName: sql-pvc
