Kubernetes/menu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  namespace: eatfresh
spec:
  selector:
    app: webapi
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 5136
  type: ClusterIP
