Kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: eatfresh
spec:
  selector:
    app: rabbitmq-pod
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
    - name: management
      protocol: TCP
      port:
