Kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: eatfresh
spec:
  selector:
    app: webapi
  ports:
    - name: port1
      protocol: TCP
      port: 5280
      targetPort: 5280
    - name: port2
      protocol: TCP
      port: 7004
      targetPort: 7004
  type: ClusterIP
