Kubernetes/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-service
  namespace: eatfresh
spec:
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
