Kubernetes/rabbitmq-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-network-policy
  namespace: eatfresh
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: MenuManagement
    ports:
      - protocol: TCP
        port: 5672
  - from:
    - podSelector:
        matchLabels:
          app: db-MenuManagement
    ports:
      - protocol: TCP
        port: 5672
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: MenuManagement
    ports:
      - protocol: TCP
        port: 5672
  - to:
    - podSelector:
        matchLabels:
          app: db-MenuManagement
    ports:
      - protocol: TCP
        port: 5672
